# orbveil

./: .gitignore  AUDIT.md  CHANGELOG-fixes.md  CHANGELOG.md  IMPLEMENTATION_NOTES.md  IMPLEMENTATION_SUMMARY.md  LICENSE  PUSH-REPORT.md  README-draft.md  README.md  VALIDATION.md  pyproject.toml
docs/: api-reference.md  examples.md  quickstart.md
examples/: batch_screening.py  quickstart.py
src/orbveil/: __init__.py
src/orbveil/api/: __init__.py  client.py
src/orbveil/core/: __init__.py  formations.py  probability.py  propagation.py  risk.py  screening.py  tle.py
src/orbveil/data/: __init__.py  cdm.py  spacetrack.py
src/orbveil/utils/: __init__.py  constants.py
tests/: test_data.py  test_formations.py  test_integration.py  test_probability.py  test_propagation.py  test_risk.py  test_screening.py  test_tle.py
